--- a/user-thrift-service/pom.xml
+++ b/user-thrift-service/pom.xml
@@ -10,7 +10,7 @@
    <!--<parent>-->
         <!--<artifactId>org.springframework.boot</artifactId>-->
         <!--<groupId>spring-boot-start-parent</groupId>-->
-        <!--<version>1.5.3.RELEASE</version>-->
+        <!--<version>1.3.1.RELEASE</version>-->
     <!--</parent>-->
 
 
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>1.5.3.RELEASE</version>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
         <dependency>
@@ -61,6 +61,28 @@
             <artifactId>spring-context</artifactId>
             <version>5.1.3.RELEASE</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/org.springframework.context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework.context</artifactId>
+            <version>3.2.2.RELEASE</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.1.1.RELEASE</version>
+        </dependency>
+
+
+
 
 
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
