--- a/user-edge-service/pom.xml
+++ b/user-edge-service/pom.xml
@@ -7,19 +7,16 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.3.RELEASE</version>
     </parent>
-
-
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>user-edge-service</artifactId>
     <groupId>com.imooc</groupId>
-    <artifactId>user-thrift-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
+        <!-- spring-boot的web启动的jar包 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.thrift</groupId>
@@ -36,24 +33,10 @@
             <artifactId>message-thrift-service-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.46</version>
-        </dependency>
-
-
-        <!-- spring-boot的web启动的jar包 -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
 
@@ -73,5 +56,7 @@
         </plugins>
 
     </build>
+
+
 
 </project>
