--- a/user-edge-service/src/main/resources/application.properties
+++ b/user-edge-service/src/main/resources/application.properties
@@ -6,7 +6,10 @@ service.port = 8082
 thrift.user.ip=127.0.0.1
 thrift.user.port=7911
 
+thrift.message.ip=127.0.0.1
+thrift.message.port=9090
+
 #redis config
-spring.redis.ip=192.168.153.139
+spring.redis.host=192.168.153.139
 spring.redis.port=6379
 spring.redis.timeout=3000
